photo and style sheet

--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
 <html>
+    <head>
+        <link rel="stylesheet" href="stylesheet.css">
+    </head>
     <body>
-        
+        <h1>Hi, I'm J</h1>
+        <img src="images/mumAndme.jpg" alt="profile-pic">
     </body>
 </html>
