--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="stylesheet.css">
-    </head>
-    <body>
-        <h1>Hi, I'm J</h1>
-        <img src="images/mumAndme.jpg" alt="profile-pic">
-    </body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>my portfolio site</title>
+    <link rel="stylesheet" href="stylesheet.css">
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Nosifer" rel="stylesheet">
+</head>
+<body>
+        <div class="container">
+        <h1> Hi, I'm J !!</h1>
+         <span> <img src="images/mumAndme.jpg" alt="profile-pic"></span>
+    </div>
+</body>
 </html>
